2010-01-06  Tim Waugh  <twaugh@redhat.com>

	* cupsipp.c (IPPRequest_getAttributes): Continue to next
	attribute if we can't translate a value.

2010-01-04  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_cancelJob): Optional second
	argument is now a keyword.

2009-12-22  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_init): Use more descriptive
	exception message (trac #10).

2009-12-21  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (cups_setPasswordCB2): Allow None.

2009-12-18  Jiri Popelka  <jpopelka@redhat.com>

	* cupsconnection.c (Connection.cancelJob):
	Added optional purge_job patameter.

2009-12-16  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (password_callback,
	Connection_setPasswordCB): New method.

2009-12-08  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printFile): If cupsPrintFile2()
	fails it returns zero, not -1 (trac #9).

2009-09-03  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDevices): Added optional timeout
	parameter.

2009-08-18  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c: Define some IPP attribute tag constants.

	* cupsipp.c (IPPRequest_getAttributes): Handle IPP_TAG_ZERO
	attributes which have no attribute name.

2009-08-17  Tim Waugh  <twaugh@redhat.com>

	* cupsipp.c: New file implementing IPPRequest and IPPAttribute
	types.
	* setup.py: Include it as part of the module.
	* Makefile: Add to SOURCES.
	* cupsmodule.c: Define IPP constants.

2009-08-10  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c: Fixed missing newline in documentation for
	getPPDs.

2009-07-07  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_moveJob): New method.

2009-06-19  Tim Waugh  <twaugh@redhat.com>

	* examples/cupstree.py (getippqueue): IPP printers won't support
	CUPS-Get-Printers so don't try recursing.
	(getqueue): Slightly prettier display.

2009-06-18  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.46.
